--- a/package.json
+++ b/package.json
@@ -3,20 +3,26 @@
   "workspaces": {
     "packages": [
       "api",
-      "web"
+      "web",
+      "packages/*"
     ]
   },
   "devDependencies": {
     "@redwoodjs/core": "^0.28.0"
   },
   "eslintConfig": {
-    "extends": "@redwoodjs/eslint-config"
+    "extends": "@redwoodjs/eslint-config",
+    "root": true
   },
   "engines": {
-    "node": ">=12",
+    "node": ">=14",
     "yarn": ">=1.15"
   },
   "scripts": {
     "start": "yarn redwood dev"
+  },
+  "resolutions": {
+    "react-dom": "17.0.1",
+    "react": "17.0.1"
   }
 }
