--- a/web/package.json
+++ b/web/package.json
@@ -24,6 +24,7 @@
     "netlify-identity-widget": "^1.9.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-hook-form": "^6.9.5"
   }
 }
