--- a/web/package.json
+++ b/web/package.json
@@ -16,10 +16,10 @@
     "@chakra-ui/react": "^1.4.1",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
-    "@redwoodjs/auth": "0.32.2",
-    "@redwoodjs/forms": "0.32.2",
-    "@redwoodjs/router": "0.32.2",
-    "@redwoodjs/web": "0.32.2",
+    "@redwoodjs/auth": "^0.33.3",
+    "@redwoodjs/forms": "^0.33.3",
+    "@redwoodjs/router": "^0.33.3",
+    "@redwoodjs/web": "^0.33.3",
     "framer-motion": "^3.2.1",
     "netlify-identity-widget": "^1.9.1",
     "prop-types": "^15.7.2",
